--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -1,3 +1,20 @@
 body {
   margin: 0;
+  background-image: linear-gradient(-45deg, #a8edea 0%, #fed6e3 100%);
+  animation: gradient 20s ease infinite;
+  background-size: 400% 400%;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
